[package]
name = "kubers-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.93.1", features = ["client", "runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
k8s-openapi = { version = "0.22.0", features = ["latest"] }
async-std = "1.12.0"